[project]
name = "vapi-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
    "google-api-python-client>=2.129.0",
    "google-auth>=2.29.0",
]

[tool.vercel]
entrypoint = "backend:app"


